--- a/home.html
+++ b/home.html
@@ -8,13 +8,23 @@
     
 </head>
 <body>
+    <!--new-->
     <div class="home_img">
+        <div class="text">
    <img src="home1.jpeg" alt="home1" class="home-img"> 
+   <p>
+    This image captures the essence of modern elegance and comfort. the open-copcept design seamlessly blends the living room, dining area, and kitchen, creating a warm and inviting space. The large windows allow natural light to flood in, enhancing the airy ambiance. The neutral-toned sectional sofa, accented with soft yellow pillows, adds a touch of coziness, while the wooden elements in the kitchen and coffee table bring warmth and sophistication. The overall aesthetic is a perfect balance of contemporary luxury and homely charm-a space designed for relaxation, gatherings, and making beautiful memories.
+   </p></div>
+   <div class="text">
    <img src="home2.jpeg" alt="home2" class="home-img"> 
+   <p>
+    This space exudes pure elegance and sophistication, with a soft and dreamy color palette of blush pink, gold, and neural tones. The luxurious furnishings, including the plush seating and stylish gold-accented tables, create a warm and inviting atmosphere. The hanging chair by the large window adds a unique, playful touch, perfect for relaxation while enjoying breathtaking views. The intricate lighting fixtures enhance the mordern yet cozy ambiance, making this space a perfect blend of glamour and comfort. A ture masterpiece of intior desidn, radiating charm and timeless beauty.
+   </p></div>
    <img src="home3.jpeg" alt="home3" class="home-img"> 
    <img src="home4.jpeg" alt="home4" class="home-img"> 
    <img src="home5.jpeg" alt="home5" class="home-img">
    <img src="home6.jpeg" alt="home6" class="home-img">
+
 </div>
 </body>
 </html>
