--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
  <nav class="navbar">
         <ul class="nav-link">
             <li> <a href="#">Home</a></li>
@@ -14,8 +15,13 @@
             <li><a href="service.html"> service</a></li>
             
         </ul>
+        <div class="hamburger">
+         <span></span>
+         <span></span>
+         <span></span>
+        </div>
     </nav>
     <img src="./img.jpeg" alt="img">
- 
+</header>
 </body>
 </html>
