--- a/home.html
+++ b/home.html
@@ -11,19 +11,30 @@
     <!--new-->
     <div class="home_img">
         <div class="text">
-   <img src="home1.jpeg" alt="home1" class="home-img"> 
+   <img src="./image/home1.jpeg" alt="home1" class="home-img"> 
    <p>
     This image captures the essence of modern elegance and comfort. the open-copcept design seamlessly blends the living room, dining area, and kitchen, creating a warm and inviting space. The large windows allow natural light to flood in, enhancing the airy ambiance. The neutral-toned sectional sofa, accented with soft yellow pillows, adds a touch of coziness, while the wooden elements in the kitchen and coffee table bring warmth and sophistication. The overall aesthetic is a perfect balance of contemporary luxury and homely charm-a space designed for relaxation, gatherings, and making beautiful memories.
    </p></div>
    <div class="text">
-   <img src="home2.jpeg" alt="home2" class="home-img"> 
+   <img src="./image/home2.jpeg" alt="home2" class="home-img"> 
    <p>
     This space exudes pure elegance and sophistication, with a soft and dreamy color palette of blush pink, gold, and neural tones. The luxurious furnishings, including the plush seating and stylish gold-accented tables, create a warm and inviting atmosphere. The hanging chair by the large window adds a unique, playful touch, perfect for relaxation while enjoying breathtaking views. The intricate lighting fixtures enhance the mordern yet cozy ambiance, making this space a perfect blend of glamour and comfort. A ture masterpiece of intior desidn, radiating charm and timeless beauty.
    </p></div>
-   <img src="home3.jpeg" alt="home3" class="home-img"> 
-   <img src="home4.jpeg" alt="home4" class="home-img"> 
-   <img src="home5.jpeg" alt="home5" class="home-img">
-   <img src="home6.jpeg" alt="home6" class="home-img">
+   <div class="text">
+   <img src="./image/home3.jpeg" alt="home3" class="home-img">
+    <p>
+        This living room exudes elegance and warmth with its modern, minimalist design. The neutral-toned sectional sofa invites relaxation, while the sleek coffee table adds a touch of sophistication. The built-in wooden shelves with soft lighting create a cozy amblance, beautifully complementing the warm textures and earthy hues in the dector. The statement chandelier serves as a stunning centerpiece, enhancing the luxurious yet welcoming atmosphere. This space perfectly blend style and comfort, making it an ideal setting for relaxation and social gathering
+    </p></div>
+    <div class="text">
+   <img src="./image/home4.jpeg" alt="home4" class="home-img">
+   <p>
+        This living room and dining area radiate warmth and sophistication with its soft, neutral tones and elegant decor. The plush seating, accented with earthy orange cushions, adds a cozy yet refined touch. A modern wooden coffee table sits gracefully in the center, decorated with stylish accessories that enhance the room's aesthetic. The dining area in the background, with its beautifully arranged floral centerpiece and ambient lighting, creates a welcoming space for intimate gatherings. The entire setting exudes harmony, blending comfort and luxury seamlessly
+   </p> </div>
+   <div class="text">
+   <img src="./image/home6.jpeg" alt="home6" class="home-img">
+   <p>
+    This living room showcase a stunning blend of mordern elegance and minimalistic charm. The neural color palette, dominated by shades of white and beige, create a bright and airy ambiance. The sleek TV console and contemporary coffee table add a touch of sophistication, while the plush sofa with colorful accent pillows brings warmth and comfort. The beautifully designed staircase with black railings adds depth and character, seamlessly connecting the space. The framed wall art enhances the modern aesthetic, making this a perfect example of stylish yet cozy living.
+   </p></div>
 
 </div>
 </body>
