--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
          <span></span>
         </div>
     </nav>
-    <img src="./img.jpeg" alt="img">
+    <img src="./image/img.jpeg" alt="img">
 </header>
 </body>
 </html>
