--- a/service.html
+++ b/service.html
@@ -23,6 +23,7 @@
             <div class="service">
                 <h3>Office Setup</h3>
                 <p>Enhance productivity with our modern office design.</p>
+                <a href="office.html">click</a>
             </div>
             <div class="service">
                 <h3>Custom Funiture</h3>
