--- a/home.html
+++ b/home.html
@@ -13,7 +13,8 @@
         <div class="text">
    <img src="./image/home1.jpeg" alt="home1" class="home-img"> 
    <p>
-    This image captures the essence of modern elegance and comfort. the open-copcept design seamlessly blends the living room, dining area, and kitchen, creating a warm and inviting space. The large windows allow natural light to flood in, enhancing the airy ambiance. The neutral-toned sectional sofa, accented with soft yellow pillows, adds a touch of coziness, while the wooden elements in the kitchen and coffee table bring warmth and sophistication. The overall aesthetic is a perfect balance of contemporary luxury and homely charm-a space designed for relaxation, gatherings, and making beautiful memories.
+    This image captures the essence of modern elegance and comfort. the open-copcept design seamlessly blends the living room, dining area, and kitchen, creating a warm and inviting space.
+    <button class="read-more-btn">Read More</button> The large windows allow natural light to flood in, enhancing the airy ambiance. The neutral-toned sectional sofa, accented with soft yellow pillows, adds a touch of coziness, while the wooden elements in the kitchen and coffee table bring warmth and sophistication. The overall aesthetic is a perfect balance of contemporary luxury and homely charm-a space designed for relaxation, gatherings, and making beautiful memories.
    </p></div>
    <div class="text">
    <img src="./image/home2.jpeg" alt="home2" class="home-img"> 
