--- a/office.html
+++ b/office.html
@@ -9,11 +9,18 @@
 <body>
     <div class="office-img">
     <div class="text">
-    <img src="./image/office1.jpeg" alt="office1"></div>
+    <img src="./image/office1.jpeg" alt="office1"><p>
+        This moedern office space is designed for productivity and collaboration. with a spacious conference table, ergonomic chairs, and large windows providing natural lighting, it create a comfortable and professional work environment. screens add to the sophisticated ambiance, making it an ideal setting for meetings, brainstorming sessions, and corporate gatherings.
+    </p></div>
     <div class="text">
-    <img src="./image/office2.jpeg" alt="office2"></div>
+    <img src="./image/office2.jpeg" alt="office2"><p>
+        This luxurious office space is designed for efficiency and elegance. Featuring a morden workstation with comfortable ergonomic chairs, built-in wooden shelves for organization, and decorative wall art, it create an inspiring and professional atmosphere. The combination of warm lighting and sleek furnishings enhances productivity while maintaining a sophisticated aesthetic
+    </p></div>
     <div class="text">
-    <img src="./image/office3.jpeg" alt="office3"></div>
+    <img src="./image/office3.jpeg" alt="office3"><p>
+        This contemporary open-plan office is designed for collaboration and efficiency. The spacious layout features shared workstations, ergonomic chairs, and large windows that allows for natural lighting. industrail-style ceilings and shelving units with plants add a touch of greenery, creating a refreshing and motivating environment. ideal for startups, creative teams, and dynamic workplaces, this office fosters teamwork while maintaining a sleek, professional looks.
+        
+    </p></div>
     <div class="text">
     <img src="./image/office4.jpeg" alt="office4"></div>
     <div class="text">
