--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
  <button class="Read-more-btn">Read More</button></div>
 </div>
  <script>
-    document.querySelectorAll('read-more-btn').
+    document.querySelectorAll('.Read-more-btn').
     forEach(button =>{
                button.addEventListener('click',
                 () => {
@@ -56,8 +56,7 @@
                                button.innerText = "Read  less";        
                 }  else{
                            fullText.style.display= "none";
-                           button.innerText ="Read more"
-                           
+                           button.innerText ="Read more";      
                 }  
              });
            });
