--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
                                  if (fullText.style.display
                 === "none" || fullText.style.display ==="") 
                 {
-                               fullText.stlye.display =
+                               fullText.style.display =
                      "block";
                                button.innerText = "Read  less";        
                 }  else{
