--- a/office.html
+++ b/office.html
@@ -10,7 +10,7 @@
     <div class="office-img">
     <div class="text">
     <img src="./image/office1.jpeg" alt="office1"><p>
-        This moedern office space is designed for productivity and collaboration. with a spacious conference table, ergonomic chairs, and large windows providing natural lighting, it create a comfortable and professional work environment. screens add to the sophisticated ambiance, making it an ideal setting for meetings, brainstorming sessions, and corporate gatherings.
+        This modern office space is designed for productivity and collaboration. with a spacious conference table, ergonomic chairs, and large windows providing natural lighting, it create's a comfortable and professional work environment. screens add to the sophisticated ambiance, making it an ideal setting for meetings, brainstorming sessions, and corporate gatherings.
     </p></div>
     <div class="text">
     <img src="./image/office2.jpeg" alt="office2"><p>
@@ -18,13 +18,16 @@
     </p></div>
     <div class="text">
     <img src="./image/office3.jpeg" alt="office3"><p>
-        This contemporary open-plan office is designed for collaboration and efficiency. The spacious layout features shared workstations, ergonomic chairs, and large windows that allows for natural lighting. industrail-style ceilings and shelving units with plants add a touch of greenery, creating a refreshing and motivating environment. ideal for startups, creative teams, and dynamic workplaces, this office fosters teamwork while maintaining a sleek, professional looks.
+        This contemporary open-plan office is designed for collaboration and efficiency. The spacious layout features shared workstations, ergonomic chairs, and large windows that allow for natural lighting. industrial-style ceilings and shelving units with plants add a touch of greenery, creating a refreshing and motivating environment. ideal for startups, creative teams, and dynamic workplaces, this office fosters teamwork while maintaining a sleek, professional look.
         
     </p></div>
     <div class="text">
-    <img src="./image/office4.jpeg" alt="office4"></div>
+    <img src="./image/office4.jpeg" alt="office4"><p>
+        This open-plan office space is designed for collaboration and efficiency.
+    </p></div>
     <div class="text">
-    <img src="./image/office5.jpeg" alt="office5"></div>
+    <img src="./image/office5.jpeg" alt="office5">
+     <p>This office space exudes modern sophistication with its sleek white desidn, ambient blue lighting, and minimalist decor. The well-organized workstation, accented with stylish floating shelves and a polished desk, creates an atmosphere of professionalism and efficienty. The glass partition adds an elegant touch, enhancing the sense of openess while maintaining privacy. Perfect for high-level executives or creative professionals, this space blends functonality with luxury, making it an inspiring environment for productivity.</p></div>
     </div>
 </body>
 </html>
