--- a/office.html
+++ b/office.html
@@ -23,11 +23,32 @@
     </p></div>
     <div class="text">
     <img src="./image/office4.jpeg" alt="office4"><p>
-        This open-plan office space is designed for collaboration and efficiency.
+        This open-plan office space is designed for collaboration and efficiency. with a clean, modern layout, it features well-organized workstatons equipped with ergonomic chairs, multiple monitors, and neatly arranged telephones. The bright lighting and neutral color scheme, accented with vibrant orange dividers, create an energetic yet professional atmosphere. ideal for teawork and productivity, this workspace fosters communication while maintaining a structured and organized environment for employees.
     </p></div>
     <div class="text">
     <img src="./image/office5.jpeg" alt="office5">
-     <p>This office space exudes modern sophistication with its sleek white desidn, ambient blue lighting, and minimalist decor. The well-organized workstation, accented with stylish floating shelves and a polished desk, creates an atmosphere of professionalism and efficienty. The glass partition adds an elegant touch, enhancing the sense of openess while maintaining privacy. Perfect for high-level executives or creative professionals, this space blends functonality with luxury, making it an inspiring environment for productivity.</p></div>
+     <p>This office space exudes modern sophistication with its sleek white desidn, ambient blue lighting, and minimalist decor.</p> The well-organized workstation, accented with stylish floating shelves and a polished desk, creates an atmosphere of professionalism and efficienty. The glass partition adds an elegant touch, enhancing the sense of openess while maintaining privacy. Perfect for high-level executives or creative professionals, this space blends functonality with luxury, making it an inspiring environment for productivity.</div>
+     <button class="Read-more-btn">Read More</button></div>
     </div>
+    <script>
+        document.querySelectorAll('.Read-more-btn').
+        forEach(button =>{
+                   button.addEventListener('click',
+                    () => {
+                         const fullText =
+                    button.previousElementSibling;
+                                     if (fullText.style.display
+                    === "none" || fullText.style.display ==="") 
+                    {
+                                   fullText.style.display =
+                         "block";
+                                   button.innerText = "Read  less";        
+                    }  else{
+                               fullText.style.display= "none";
+                               button.innerText ="Read more";      
+                    }  
+                 });
+               });
+     </script>
 </body>
 </html>
