--- a/office.html
+++ b/office.html
@@ -10,24 +10,24 @@
     <div class="office-img">
     <div class="text">
     <img src="./image/office1.jpeg" alt="office1"><p>
-        This modern office space is designed for productivity and collaboration. with a spacious conference table, ergonomic chairs, and large windows providing natural lighting, it create's a comfortable and professional work environment. screens add to the sophisticated ambiance, making it an ideal setting for meetings, brainstorming sessions, and corporate gatherings.
-    </p></div>
+        This modern office space is designed for productivity and collaboration.</p> <div class="full-text"> with a spacious conference table, ergonomic chairs, and large windows providing natural lighting, it create's a comfortable and professional work environment. screens add to the sophisticated ambiance, making it an ideal setting for meetings, brainstorming sessions, and corporate gatherings.</div>
+        <button class="Read-more-btn">Read More</button></div>
     <div class="text">
     <img src="./image/office2.jpeg" alt="office2"><p>
-        This luxurious office space is designed for efficiency and elegance. Featuring a morden workstation with comfortable ergonomic chairs, built-in wooden shelves for organization, and decorative wall art, it create an inspiring and professional atmosphere. The combination of warm lighting and sleek furnishings enhances productivity while maintaining a sophisticated aesthetic
-    </p></div>
+        This luxurious office space is designed for efficiency and elegance. </p> <div class="full-text">Featuring a morden workstation with comfortable ergonomic chairs, built-in wooden shelves for organization, and decorative wall art, it create an inspiring and professional atmosphere. The combination of warm lighting and sleek furnishings enhances productivity while maintaining a sophisticated aesthetic</div>
+        <button class="Read-more-btn">Read More</button></div>
     <div class="text">
     <img src="./image/office3.jpeg" alt="office3"><p>
-        This contemporary open-plan office is designed for collaboration and efficiency. The spacious layout features shared workstations, ergonomic chairs, and large windows that allow for natural lighting. industrial-style ceilings and shelving units with plants add a touch of greenery, creating a refreshing and motivating environment. ideal for startups, creative teams, and dynamic workplaces, this office fosters teamwork while maintaining a sleek, professional look.
+        This contemporary open-plan office is designed for collaboration and efficiency.</p> <div class="full-text">The spacious layout features shared workstations, ergonomic chairs, and large windows that allow for natural lighting. industrial-style ceilings and shelving units with plants add a touch of greenery, creating a refreshing and motivating environment. ideal for startups, creative teams, and dynamic workplaces, this office fosters teamwork while maintaining a sleek, professional look.</div> 
         
-    </p></div>
+      <button class="Read-more-btn">Read More</button></div>
     <div class="text">
     <img src="./image/office4.jpeg" alt="office4"><p>
-        This open-plan office space is designed for collaboration and efficiency. with a clean, modern layout, it features well-organized workstatons equipped with ergonomic chairs, multiple monitors, and neatly arranged telephones. The bright lighting and neutral color scheme, accented with vibrant orange dividers, create an energetic yet professional atmosphere. ideal for teawork and productivity, this workspace fosters communication while maintaining a structured and organized environment for employees.
-    </p></div>
+        This open-plan office space is designed for collaboration and efficiency. with a clean, modern layout, it features well-organized workstatons equipped with ergonomic chairs, multiple monitors, and neatly arranged telephones.  </p> <div class="full-text">The bright lighting and neutral color scheme, accented with vibrant orange dividers, create an energetic yet professional atmosphere. ideal for teawork and productivity, this workspace fosters communication while maintaining a structured and organized environment for employees.</div>
+        <button class="Read-more-btn">Read More</button></div>
     <div class="text">
     <img src="./image/office5.jpeg" alt="office5">
-     <p>This office space exudes modern sophistication with its sleek white desidn, ambient blue lighting, and minimalist decor.</p> The well-organized workstation, accented with stylish floating shelves and a polished desk, creates an atmosphere of professionalism and efficienty. The glass partition adds an elegant touch, enhancing the sense of openess while maintaining privacy. Perfect for high-level executives or creative professionals, this space blends functonality with luxury, making it an inspiring environment for productivity.</div>
+     <p class="extra-text">This office space exudes modern sophistication with its sleek white desidn, ambient blue lighting, and minimalist decor.</p> <div class="full-text">The well-organized workstation, accented with stylish floating shelves and a polished desk, creates an atmosphere of professionalism and efficienty. The glass partition adds an elegant touch, enhancing the sense of openess while maintaining privacy. Perfect for high-level executives or creative professionals, this space blends functonality with luxury, making it an inspiring environment for productivity.</div>
      <button class="Read-more-btn">Read More</button></div>
     </div>
     <script>
