--- a/service.html
+++ b/service.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body> <div class="service-container">
     <section id="home" class="hero">
         <h2> Transform Your Space with Elegance</h2>
         <p>We bring beauty and functionality to your interiors.</p>
@@ -14,10 +14,10 @@
     </section>
     <section>
         <h2>Our service</h2>
-        <div class="service-container">
+ 
             <div class="service">
                 <h3>Home Design</h3>
-                <p>We create beautiful and functional space for your home</p>
+                <p>We create beautiful and functional spaces for your home</p>
                 <a href="home.html">click</a>
             </div>
             <div class="service">
@@ -27,9 +27,11 @@
             </div>
             <div class="service">
                 <h3>Custom Funiture</h3>
-                <p>Handcrafted Funiture to match your style</p>
+                <p>Handcrafted Furniture to match your style</p>
+                <a href="custom.html">click</a>
             </div>
-        </div>
+       
     </section>
+</div>
 </body>
 </html>
