--- a/office.html
+++ b/office.html
@@ -14,7 +14,7 @@
         <button class="Read-more-btn">Read More</button></div>
     <div class="text">
     <img src="./image/office2.jpeg" alt="office2"><p>
-        This luxurious office space is designed for efficiency and elegance. </p> <div class="full-text">Featuring a morden workstation with comfortable ergonomic chairs, built-in wooden shelves for organization, and decorative wall art, it create an inspiring and professional atmosphere. The combination of warm lighting and sleek furnishings enhances productivity while maintaining a sophisticated aesthetic</div>
+        This luxurious office space is designed for efficiency and elegance. </p> <div class="full-text">Featuring a modern workstation with comfortable ergonomic chairs, built-in wooden shelves for organization, and decorative wall art, it create an inspiring and professional atmosphere. The combination of warm lighting and sleek furnishings enhances productivity while maintaining a sophisticated aesthetic</div>
         <button class="Read-more-btn">Read More</button></div>
     <div class="text">
     <img src="./image/office3.jpeg" alt="office3"><p>
@@ -23,11 +23,11 @@
       <button class="Read-more-btn">Read More</button></div>
     <div class="text">
     <img src="./image/office4.jpeg" alt="office4"><p>
-        This open-plan office space is designed for collaboration and efficiency. with a clean, modern layout, it features well-organized workstatons equipped with ergonomic chairs, multiple monitors, and neatly arranged telephones.  </p> <div class="full-text">The bright lighting and neutral color scheme, accented with vibrant orange dividers, create an energetic yet professional atmosphere. ideal for teawork and productivity, this workspace fosters communication while maintaining a structured and organized environment for employees.</div>
+        This open-plan office space is designed for collaboration and efficiency. with a clean, modern layout, it features well-organized workstations equipped with ergonomic chairs, multiple monitors, and neatly arranged telephones.  </p> <div class="full-text">The bright lighting and neutral color scheme, accented with vibrant orange dividers, create an energetic yet professional atmosphere. ideal for teamwork and productivity, this workspace fosters communication while maintaining a structured and organized environment for employees.</div>
         <button class="Read-more-btn">Read More</button></div>
     <div class="text">
     <img src="./image/office5.jpeg" alt="office5">
-     <p class="extra-text">This office space exudes modern sophistication with its sleek white desidn, ambient blue lighting, and minimalist decor.</p> <div class="full-text">The well-organized workstation, accented with stylish floating shelves and a polished desk, creates an atmosphere of professionalism and efficienty. The glass partition adds an elegant touch, enhancing the sense of openess while maintaining privacy. Perfect for high-level executives or creative professionals, this space blends functonality with luxury, making it an inspiring environment for productivity.</div>
+     <p class="extra-text">This office space exudes modern sophistication with its sleek white design, ambient blue lighting, and minimalist decor.</p> <div class="full-text">The well-organized workstation, accented with stylish floating shelves and a polished desk, creates an atmosphere of professionalism and efficienty. The glass partition adds an elegant touch, enhancing the sense of openness while maintaining privacy. Perfect for high-level executives or creative professionals, this space blends functionality with luxury, making it an inspiring environment for productivity.</div>
      <button class="Read-more-btn">Read More</button></div>
     </div>
     <script>
