--- a/service.html
+++ b/service.html
@@ -26,7 +26,7 @@
                 <a href="office.html">click</a>
             </div>
             <div class="service">
-                <h3>Custom Funiture</h3>
+                <h3>Custom Furniture</h3>
                 <p>Handcrafted Furniture to match your style</p>
                 <a href="custom.html">click</a>
             </div>
