--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <nav class="navbar">
         <ul class="nav-link">
             <li> <a href="#">Home</a></li>
-            <li><a href="#about">About us</a></li>
+            <li><a href="about us.html">About us</a></li>
             <li><a href="service.html"> service</a></li>
             
         </ul>
