--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="bar"></div>
           <div class="bar"></div>
         </div>
- <nav  id="nav-link" class="navbar">
+ <nav  id="nav-links" class="navbar hidden">
         <ul>
             <li> <a href="#">Home</a></li>
             <li><a href="about us.html">About us</a></li>
