--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         function toggleMenu(){
             const nav =
             document.getElementById("nav-links");
-            nav.classList.toggle(hidden);
+            nav.classList.toggle("hidden");
         }
     </script>
 </head>
