--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         function toggleMenu(){
             const nav =
             document.getElementById("nav-links");
-            nav.classList.toggle("hidden");
+            nav.classList.toggle("show");
         }
     </script>
 </head>
@@ -20,7 +20,7 @@
           <div class="bar"></div>
           <div class="bar"></div>
         </div>
- <nav  id="nav-links" class="navbar hidden">
+ <nav  id="nav-links" class="navbar ">
         <ul>
             <li> <a href="#">Home</a></li>
             <li><a href="about us.html">About us</a></li>
