--- a/about us.html
+++ b/about us.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="about1">
+        <h1>About us</h1>
+        <p>Welcome to our world we are a passionate team dedicated to making a positive impact through creativity, innovation, and love for what we do.</p>
+        <p>Our mission is to bring people together, share meaningful stories, and impression. we believe in the power of connection and the beauty of collaboration.</p>
+        <p>Founded by dreamers and driven by purpose, we strive to grow, learn, and inspire others every single day. Thank you for being part of our journey!</p>
+        <p> with love, <br><strong>The Team strong</strong></p>
+    </div>
 </body>
 </html>
