--- a/about us.html
+++ b/about us.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="about1">
-        <h1>About us</h1>
-        <p>Welcome to our world we are a passionate team dedicated to making a positive impact through creativity, innovation, and love for what we do.</p>
-        <p>Our mission is to bring people together, share meaningful stories, and impression. we believe in the power of connection and the beauty of collaboration.</p>
-        <p>Founded by dreamers and driven by purpose, we strive to grow, learn, and inspire others every single day. Thank you for being part of our journey!</p>
-        <p> with love, <br><strong>The Team strong</strong></p>
-    </div>
+     <section class="about-section">     
+           <h1>About us</h1>
+     <p> At ROYAL INTERIOR, we believe that every space tells a story. our interior design is dedicated to teansforming environments into elegant, functional, and lifestyles of our clients.</p>
+     <p>With a strong foundation in creativity, innovation, and attention to commercial interior design, blending timeless aesthetics with modern trends. Form concept to completion, we prioritize collaboration, communication, and quality craftsmanship.</p>
+     <p>Founded by passionate designers  with a shared vision, our team brings years of experience, technical expertise, and a cozy home, a corporate office, or a boutique space, we bring interiors to life-one detail at a time.</p>
+
+        
+    </section>
+
+
 </body>
 </html>
