--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
         
     </nav>
 
-    
+    <div class="iii"><b>ABOUT</b>
+    <p>At ROYAL INTERIOR, we believe that every space tells a story. our interior design is dedicated to teansforming environments into elegant, functional, and lifestyles of our clients.</p></div>
+    <div class="iii"><b>SERVICE</b><p>At ROYAL INTERIOR, we offer a range of expert interior design service to help you create the perfect space. Our service include
+   <ul><li>Home Design</li>
+   <li>Office Setup</li>
+   <li>Custom Furniture</li></ul>
+    </p></div>
 </body>
 </html>
