--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </ul>
         
     </nav>
-
+    <div class="both">
     <div class="iii"><strong>ABOUT</strong>
     <p>At ROYAL INTERIOR, we believe that every space tells a story. our interior design is dedicated to teansforming environments into elegant, functional, and lifestyles of our clients.</p></div>
     <div class="iii"><strong>SERVICE</strong><p>At ROYAL INTERIOR, we offer a range of expert interior design service to help you create the perfect space. Our service include </p>
@@ -27,5 +27,7 @@
    <li>Office Setup</li>
    <li>Custom Furniture</li></ul>
    </div>
+</div>
+</section>
 </body>
 </html>
