--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         </ul>
         
     </nav>
-    <div class="both">
-    <div class="iii"><strong>ABOUT</strong>
+    <div class="about-service-container">
+    <div class="section"><strong>ABOUT</strong>
     <p>At ROYAL INTERIOR, we believe that every space tells a story. our interior design is dedicated to teansforming environments into elegant, functional, and lifestyles of our clients.</p></div>
-    <div class="iii"><strong>SERVICE</strong><p>At ROYAL INTERIOR, we offer a range of expert interior design service to help you create the perfect space. Our service include </p>
+    <div class="section"><strong>SERVICE</strong><p>At ROYAL INTERIOR, we offer a range of expert interior design service to help you create the perfect space. Our service include </p>
    <ul><li>Home Design</li>
    <li>Office Setup</li>
    <li>Custom Furniture</li></ul>
    </div>
 </div>
-</section>
+
 </body>
 </html>
