--- a/index.html
+++ b/index.html
@@ -13,19 +13,21 @@
  <nav  id="nav" class="navbar">
         <ul>
             <li> <a href="#">Home</a></li>
-            <li><a href="about us.html">About us</a></li>
-            <li><a href="service.html"> service</a></li>
+            <li><a href="#section">About us</a></li>
+            <li><a href="#section2"> service</a></li>
             
         </ul>
         
     </nav>
     <div class="about-service-container">
-    <div class="section"><strong>ABOUT</strong>
-    <p>At ROYAL INTERIOR, we believe that every space tells a story. our interior design is dedicated to teansforming environments into elegant, functional, and lifestyles of our clients.</p></div>
-    <div class="section"><strong>SERVICE</strong><p>At ROYAL INTERIOR, we offer a range of expert interior design service to help you create the perfect space. Our service include </p>
+    <div id="section"><strong>ABOUT</strong>
+    <p>At ROYAL INTERIOR, we believe that every space tells a story. our interior design is dedicated to transforming environments into elegant, functional, and the lifestyles of our clients.</p>
+   <a href="about us.html">click</a></div>
+    <div id="section2"><strong>SERVICE</strong><p>At ROYAL INTERIOR, we offer a range of expert interior design service to help you create the perfect space. Our service include </p>
    <ul><li>Home Design</li>
    <li>Office Setup</li>
    <li>Custom Furniture</li></ul>
+   <a href="service.html"> click</a>
    </div>
 </div>
 
