--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
     <nav  id="nav" class="navbar">
         <ul>
-            <li> <a href="#">Home</a></li>
+            <li> <a href="index.html">Home</a></li>
             <li><a href="about us.html">About us</a></li>
             <li><a href="contact.html">Contact</a></li>
            
@@ -17,5 +17,10 @@
         </ul>
         
     </nav>
+  <div class="contact"> 
+  <h2> Royal Interior</h2>
+  <form id="contactform"></form>
+  <input type="text">
+  </div>
 </body>
 </html>
