--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,21 @@
     </nav>
   <div class="contact"> 
   <h2> Royal Interior</h2>
-  <form id="contactform"></form>
-  <input type="text">
+  <form id="contactform">
+  <input type="text" name="" placeholder="Your Name" required>
+  <input type="email" emal="" placeholder="Your Email" required>
+  <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+  <button type="submit">Send Massage</button>
+</form>
+<div class="loading" id="loadingMessage">
+    <p>submitting your message...</p>
+    <div class="spinner"></div>
+</div>
+     <div class="social-icons"> 
+        <p>Phone: +2348158373332</p>
+        <p>Email: aaliyahadegoke@gmail.com</p>
+
+     </div>
   </div>
 </body>
 </html>
