--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         }
         .contact{
             padding: 20px;
-            max-width: 40px;
+            max-width: 400px;
             margin: auto;
             border-radius: 10px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -26,6 +26,7 @@
         }
         input, textarea{
             width: 100px;
+            max-width: 300px;
             padding: 10px;
             margin: 10px 0;
             border: 1px solid #ccc;
@@ -84,9 +85,9 @@
     </nav>
   <div class="contact"> 
   <h2> Royal Interior</h2>
-  <form id="contactform">
+  <form id="contactForm">
   <input type="text" name="" placeholder="Your Name" required>
-  <input type="email" emal="" placeholder="Your Email" required>
+  <input type="email" email="" placeholder="Your Email" required>
   <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
   <button type="submit">Send Massage</button>
 </form>
