--- a/contact.html
+++ b/contact.html
@@ -28,15 +28,21 @@
     color: rgb(50, 36, 154);
     font-weight: bold;
     transition: color 0.3s ease;
+    align-items: center;
+    justify-content: center;
 }
 
 .navbar2 ul li a:hover {
     color: rgb(33, 179, 38);
     text-decoration: underline;
+    align-items: center;
+    justify-content: center;
 }
 
 .navbar2 li {
     display: inline;
+    align-items: center;
+    justify-content: center;
 }
 
         .contact{
