--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Royal Interiors</title>
     <link rel="stylesheet" href="style.css">
- 
+  
 </head>
 <body id="body">
     
@@ -28,7 +28,7 @@
        <h1 class="word"><strong>ROYAL INTERIOR</strong></h1> 
     </div>
     <div class="about-service-container">
-       
+       <div class="me">
              <strong>SERVICE</strong>
           <div class="page">
             <a href="Home.html">Home Design</a>
@@ -39,6 +39,7 @@
           <div class="page">
             <a href="custom.html">Custom Furniture</a>
           </div>
+         </div>
    </div>
 </body>
 </html>
