--- a/office.html
+++ b/office.html
@@ -3,23 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Office Image Gallery</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Office Image Gallery -->
     <div class="office-img">
-    <div class="text">
-    <img src="./image/office1.jpeg" alt="office1">
-    <div class="text">
-    <img src="./image/office2.jpeg" alt="office2">
-    <div class="text">
-    <img src="./image/office3.jpeg" alt="office3">
-    <div class="text">
-    <img src="./image/office4.jpeg" alt="office4">
-    <div class="text">
-    <img src="./image/office5.jpeg" alt="office5">
-     
-    </div>
-  
-</body>
-</html>
+        <div class="text">
+            <img src="./image/office1.jpeg" alt="Office Image 1" class="office-image">
+        </div>
+        <div class="text">
+            <img src="./image/office2.jpeg" alt="Office Image 2" class="office-image">
+        </div>
+        <div class="text">
+            <img src="./image/office3.jpeg" alt="Office Image 3" class="office-image">
+        </div>
+        <div class="text">
+            <img src="./image/office4.jpeg" alt="Office Image 4" class="office-image">
+        </div>
+        <div class
