--- a/home.html
+++ b/home.html
@@ -3,29 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home Image Gallery</title>
     <link rel="stylesheet" href="style.css">
-    
 </head>
 <body>
-    <!--new-->
+    <!-- Home Image Gallery -->
     <div class="home_img">
         <div class="text">
-   <img src="./image/home1.jpeg" alt="home1" class="home-img"> 
-   
-   <div class="text">
-   <img src="./image/home2.jpeg" alt="home2" class="home-img"> 
-   
-   <div class="text">
-   <img src="./image/home3.jpeg" alt="home3" class="home-img">
-   
-    <div class="text">
-   <img src="./image/home4.jpeg" alt="home4" class="home-img">
-   
-   <div class="text">
-   <img src="./image/home6.jpeg" alt="home6" class="home-img">
-   
-</div>
-
+            <img src="./image/home1.jpeg" alt="Home Image 1" class="home-img">
+        </div>
+        <div class="text">
+            <img src="./image/home2.jpeg" alt="Home Image 2" class="home-img">
+        </div>
+        <div class="text">
+            <img src="./image/home3.jpeg" alt="Home Image 3" class="home-img">
+        </div>
+        <div class="text">
+            <img src="./image/home4.jpeg" alt="Home Image 4" class="home-img">
+        </div>
+        <div class="text">
+            <img src="./image/home6.jpeg" alt="Home Image 6" class="home-img">
+        </div>
+    </div>
 </body>
 </html>
