--- a/index.html
+++ b/index.html
@@ -27,20 +27,26 @@
     <div class="INTERIOR">
        <h1 class="word"><strong>ROYAL INTERIOR</strong></h1> 
     </div>
-    
-       <div class="me">
-             <strong>SERVICE</strong>
-          <div class="page">
+       <div class="hamburger" onclick="togglemenu()">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+        </div>
+   <nav id="hiddenNav" class="hidden-nav">
+      <ul>
+         <strong>SERVICE</strong>
+         <li>
             <a href="Home.html">Home Design</a>
-         </div>
-          <div class="page">
-                 <a href="office.html">Office setup</a>
-          </div>
-          <div class="page">
+         </li>
+         <li>
+            <a href="office.html">Office setup</a>
+         </li>
+         <li>
             <a href="custom.html">Custom Furniture</a>
-          </div>
-         </div>
-   
+         </li> 
+      </ul>   
+   </nav>
+   <script src="java.js"></script>   
 </body>
-<script src="java.js"></script>
+
 </html>
