--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
    <script src="java.js"></script>   
 </body>
 <footer>
-   Aaliyah
+   <p>&copy; 2025 Royal Interiors. All rights reserved.</p>
 </footer>
 </html>
