--- a/contact.html
+++ b/contact.html
@@ -117,7 +117,7 @@
     <nav id="nav1" class="navbar2">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="about us.html">About Us</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
