--- a/custom.html
+++ b/custom.html
@@ -10,19 +10,19 @@
     <!-- Custom Image Gallery -->
     <div class="custom-img">
         <div class="text">
-            <img src="image/custom1.jpeg" alt="Custom Image 1">
+            <img src="image/custom1.jpeg" alt="Custom Image 1" class="custom-img">
         </div>
         <div class="text">
-            <img src="image/custom2.jpeg" alt="Custom Image 2">
+            <img src="image/custom2.jpeg" alt="Custom Image 2" class="custom-img">
         </div>
         <div class="text">
-            <img src="image/custom3.jpeg" alt="Custom Image 3">
+            <img src="image/custom3.jpeg" alt="Custom Image 3" class="custom-img">
         </div>
         <div class="text">
-            <img src="image/custom4.jpeg" alt="Custom Image 4">
+            <img src="image/custom4.jpeg" alt="Custom Image 4" class="custom-img">
         </div>
         <div class="text">
-            <img src="image/custom5.jpeg" alt="Custom Image 5">
+            <img src="image/custom5.jpeg" alt="Custom Image 5" class="custom-img">
         </div>
     </div>
 </body>
