--- a/office.html
+++ b/office.html
@@ -10,15 +10,15 @@
     <!-- Office Image Gallery -->
     <div class="office-img">
         <div class="text">
-            <img src="./image/office1.jpeg" alt="Office Image 1" class="office-image">
+            <img src="./image/office1.jpeg" alt="Office Image 1" class="office-img">
         </div>
         <div class="text">
-            <img src="./image/office2.jpeg" alt="Office Image 2" class="office-image">
+            <img src="./image/office2.jpeg" alt="Office Image 2" class="office-img">
         </div>
         <div class="text">
-            <img src="./image/office3.jpeg" alt="Office Image 3" class="office-image">
+            <img src="./image/office3.jpeg" alt="Office Image 3" class="office-img">
         </div>
         <div class="text">
-            <img src="./image/office4.jpeg" alt="Office Image 4" class="office-image">
+            <img src="./image/office4.jpeg" alt="Office Image 4" class="office-img">
         </div>
         <div class
