--- a/contact.html
+++ b/contact.html
@@ -118,6 +118,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about us.html">About Us</a></li>
+            <li><a href="service.html">Service</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
