--- a/office.html
+++ b/office.html
@@ -1,24 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Office Image Gallery</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <!-- Office Image Gallery -->
-    <div class="office-img">
-        <div class="text">
-            <img src="./image/office1.jpeg" alt="Office Image 1" class="office-img">
-        </div>
-        <div class="text">
-            <img src="./image/office2.jpeg" alt="Office Image 2" class="office-img">
-        </div>
-        <div class="text">
-            <img src="./image/office3.jpeg" alt="Office Image 3" class="office-img">
-        </div>
-        <div class="text">
-            <img src="./image/office4.jpeg" alt="Office Image 4" class="office-img">
-        </div>
-        <div class
+  
+     </div>
+     <section class="space">
+        <a href="kitchen.html">Kitchen</a>
+        <a href="parlour.html">Parlour</a>
+        <a href="chair.html">Chair</a>
+        <a href="office.html">Office</a>
+        <a href="bedroom.html">Bedroom</a>
+        <a href="toilet.html">Bathroom</a>
+        <a href="wardrobe.html">Wardrobe</a>
+        <a href="traditional.html">Traditional</a>
+        <a href="africa.html">Africa</a>
+        <a href="asian.html">Asian</a>
+        <a href="europe.html">Europe</a>
+        <a href="north-america.html">America</a>
+    </section>
+   
+  </div>
