--- a/kitchen.html
+++ b/kitchen.html
@@ -4,8 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="" alt="">
+    <header>
+        <div class="navbar">
+            <a href="index.html">Home</a>
+            <a href="about us.html">About us</a>
+            <a href="service.html">Service</a>
+            <a href="contact.html">Contact</a>
+        </div>
+    </header>
+    <main>
+        <div class="bab">
+           <div class="babe">
+            <img src="./image/kik1.jpeg" alt="kik1" width="500px" height="300px">
+           </div>
+           <div class="babe">
+            <img src="./image/kik2.jpeg" alt="kik2" width="500px" height="300px">
+           </div>
+           <div class="babe">
+            <img src="./image/kik3.jpeg" alt="kik3" width="500px" height="300px">
+           </div>
+           <div class="babe">
+            <img src="./image/kik4.jpeg" alt="kik4" width="500px" height="300px">
+           </div>
+           <div class="babe">
+            <img src="./image/kik5.jpeg" alt="kik5" width="500px" height="300px">
+           </div>
+           <div class="babe">
+            <img src="./image/kik6.jpeg" alt="kik6" width="500px" height="300px">
+           </div>
+           <div class="babe">
+            <img src="./image/kik7.jpeg" alt="kik7" width="500px" height="300px">
+           </div>
+           <div class="babe">
+            <img src="./image/kik8.jpeg" alt="kik8" width="500px" height="300px">
+           </div>
+           <div class="babe">
+            <img src="./image/kik9.jpeg" alt="kik9" width="500px" height="300px">
+           </div>
+           <div class="babe">
+            <img src="./image/kik10.jpeg" alt="kik10" width="500px" height="300px">
+           </div>
+        </div>
+    </main>
 </body>
 </html>
