--- a/office.html
+++ b/office.html
@@ -15,4 +15,235 @@
         <a href="north-america.html">America</a>
     </section>
    
-  </div>
+  </div><!DOCTYPE html>
+  <html lang="en">
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Furniture Gallery</title>
+      <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+      <!-- Header -->
+      <header>
+          <div class="logo">SUNWE LIVING</div>
+          <nav>
+              <ul>
+                  <li><a href="#">LUXURY ART DESIGN FURNITURE</a></li>
+                  <li><a href="#">LUXURY MODERN FURNITURE</a></li>
+                  <li><a href="#">LUXURY LIGHTING</a></li>
+                  <li><a href="#">CUSTOMIZATION</a></li>
+                  <li><a href="#">ABOUT US</a></li>
+                  <li><a href="#">CONTACT US</a></li>
+                  <li><a href="#"><img src="search-icon.png" alt="Search"></a></li>
+              </ul>
+          </nav>
+      </header>
+  
+      <!-- Main Content -->
+      <main>
+          <!-- Image Gallery -->
+          <section class="gallery">
+              <div class="grid">
+                  <div class="item">
+                      <img src="image1.jpg" alt="Model: SK99508">
+                      <p>Model: SK99508</p>
+                  </div>
+                  <div class="item">
+                      <img src="image2.jpg" alt="Model: 2888-27">
+                      <p>Model: 2888-27</p>
+                  </div>
+                  <div class="item">
+                      <img src="image3.jpg" alt="Model: BO99509">
+                      <p>Model: BO99509</p>
+                  </div>
+                  <div class="item">
+                      <img src="image4.jpg" alt="Model: BO99507">
+                      <p>Model: BO99507</p>
+                  </div>
+                  <div class="item">
+                      <img src="image5.jpg" alt="Model: SBC1005">
+                      <p>Model: SBC1005</p>
+                  </div>
+                  <div class="item">
+                      <img src="image6.jpg" alt="Model: BO99502">
+                      <p>Model: BO99502</p>
+                  </div>
+                  <div class="item">
+                      <img src="image7.jpg" alt="Model: SBC1006">
+                      <p>Model: SBC1006</p>
+                  </div>
+                  <div class="item">
+                      <img src="image8.jpg" alt="Model: SK99501">
+                      <p>Model: SK99501</p>
+                  </div>
+                  <div class="item">
+                      <img src="image9.jpg" alt="Model: SK99506">
+                      <p>Model: SK99506</p>
+                  </div>
+              </div>
+          </section>
+  
+          <!-- Filter Options -->
+          <section class="filters">
+              <h3>Living Room:</h3>
+              <button>Sofas</button>
+              <button>Dining Tables</button>
+              <button>Cabinets</button>
+              <button>Night Stands</button>
+              <button>Mirrors</button>
+              <button>Desks</button>
+              <button>Beds</button>
+              <button>Chairs</button>
+              <button>Bar Stools</button>
+              <button>Coffee Tables</button>
+              <button>Benches & Stools</button>
+              <button>Folding Screens</button>
+              <button>Sideboards</button>
+              <button>Dressing Tables</button>
+              <button>Bathrooms</button>
+              <button>Safes</button>
+              <button>Other</button>
+          </section>
+      </main>
+  </body>
+  </html>/* Reset default styles */
+  * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+  }
+  
+  body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      background-color: #f4f4f4;
+  }
+  
+  /* Header Styles */
+  header {
+      background-color: #000;
+      color: #fff;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 20px;
+  }
+  
+  .logo {
+      font-size: 20px;
+      font-weight: bold;
+      color: #fff;
+  }
+  
+  nav ul {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+  }
+  
+  nav ul li a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+      transition: color 0.3s ease;
+  }
+  
+  nav ul li a:hover {
+      color: #ccc;
+  }
+  
+  .search-icon {
+      width: 20px;
+      height: 20px;
+  }
+  
+  /* Main Content Styles */
+  main {
+      max-width: 1200px;
+      margin: 20px auto;
+      padding: 0 20px;
+  }
+  
+  .gallery {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  
+  .grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 20px;
+  }
+  
+  .item {
+      position: relative;
+      overflow: hidden;
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease;
+  }
+  
+  .item img {
+      width: 100%;
+      height: auto;
+      display: block;
+      transition: transform 0.3s ease;
+  }
+  
+  .item p {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background-color: rgba(0, 0, 0, 0.5);
+      color: #fff;
+      padding: 10px;
+      text-align: center;
+      font-weight: bold;
+      transition: opacity 0.3s ease;
+      opacity: 0;
+  }
+  
+  .item:hover {
+      transform: scale(1.05);
+  }
+  
+  .item:hover img {
+      transform: scale(1.1);
+  }
+  
+  .item:hover p {
+      opacity: 1;
+  }
+  
+  /* Filters Section */
+  .filters {
+      margin-top: 20px;
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  
+  .filters h3 {
+      margin-bottom: 10px;
+      font-size: 18px;
+      font-weight: bold;
+  }
+  
+  .filters button {
+      background-color: transparent;
+      border: 1px solid #ccc;
+      color: #333;
+      padding: 8px 12px;
+      margin-right: 10px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+  }
+  
+  .filters button:hover {
+      background-color: #f0f0f0;
+  }
